test/files/neg/virtnew_repping.check
virtnew_repping.scala:7: error: type mismatch;
 found   : Int(1)
 required: Test.Specific.Rep[Int]
      val a = 1 // a should be forced to have type Rep[Int]
              ^
one error found
